@@ -1,5 +1,6 @@
 2016-12-23 gyunaev <gyunaev@ulduzsoft.com>
   - Made "test lyrics" button reload lyrics without restarting the song (thx Dario Abatianni)
+  - Fixed compilating using modern FFmpeg
 
 2015-12-13 gyunaev <gyunaev@ulduzsoft.com>
   - Released version 2.0
